Optimizations and code changes suggested by Nyphet